# agentic-job-hunter

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  search_criteria.csv
.github/workflows/: ci.yml  security.yml
dashboard/: package.json  proxy.ts
dashboard/app/: page.tsx
dashboard/app/admin/: applications-table.tsx  layout.tsx  page.tsx
dashboard/app/login/: page.tsx
dashboard/lib/: use-applications-realtime.ts
dashboard/lib/supabase/: server.ts
docs/: CONTEXT.md
docs/superpowers/specs/: 2026-04-03-field-inspector-agent-design.md
ops/: CONTEXT.md
planning/: CONTEXT.md
planning/docs/: 2026-04-07-failure-logging.md  2026-04-09-cover-letter-agent-design.md  2026-04-09-cover-letter-agent-plan.md
src/: CONTEXT.md
src/dashboard/: package-lock.json
src/dashboard/app/: layout.tsx
src/supabase/migrations/: 004_add_failure_logs_table.sql
src/worker/: config.py  crew.py  logging_config.py  main.py
src/worker/agents/: browser.py  cover_letter_writer.py  email_agent.py  searcher.py
src/worker/db/: client.py  repository.py
src/worker/logging/: failure_logger.py
src/worker/models/: application_packet.py  application_result.py  email_log.py  failure.py  inspected_job.py  job_listing.py
supabase/migrations/: 001_initial_schema.sql  002_add_retry_count.sql  003_enable_realtime.sql  README.md
worker/: config.py  crew.py  logging_config.py  main.py
worker/agents/: browser.py  email_agent.py  evaluator.py  field_inspector.py  searcher.py
worker/db/: client.py  repository.py
worker/models/: application_packet.py  email_log.py  job.py  job_listing.py  search_criteria.py
worker/tests/: test_models.py  test_repository.py  test_retry.py
worker/tools/: browser_tool.py  browser_utils.py  field_inspector_tool.py  resume_loader.py  search_tool.py
(+31 files in other folders)
