[project]
name = "agent-job-finder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "crewai>=1.12.2",
    "duckduckgo-search>=8.1.1",
    "google-api-python-client>=2.0.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.0.0",
    "jupyter>=1.1.1",
    "langchain-community>=0.4.1",
    "pdfplumber>=0.11.0",
    "pydantic-settings>=2.0.0",
    "pytest-playwright>=0.7.2",
    "python-dotenv>=1.0.0",
    "structlog>=24.0.0",
    "supabase>=2.0.0",
]
